--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -21,20 +21,39 @@
 
 
     <title>은평 주민참여플랫폼</title>
+    <style>
+        .mytable td{
+            padding-right: 30px;
+            height: 35px;
+        }
+        .mytable textarea{
+            width: 600px;
+            height: 400px;
+        }
+    </style>
 </head>
 
 <body>
 
 <div >
-    <div style="margin-bottom: 20px;">
-        <a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> 홈</a>
-        <a href="/Suggestion/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">제안</a>
-        <a href="/DiscussionTopics/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">토론주제</a>
-        <a href="/VoteTopics/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">투표주제</a>
+    <div style="margin-top: 10px; margin-bottom: 30px; text-align: center; width: 97%;">
+        <a href="/" class="btn btn-primary"> 홈</a>
+        <a href="/Suggestion" class="btn btn-primary">제안</a>
+        <a href="/Debate" class="btn btn-primary">토론</a>
+        <a href="/Vote/Topics" class="btn btn-primary">투표</a>
 
-        <a href="/Action/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">실행</a>
-        <a href="/Meeting/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">모임</a>
-        <a href="/board/list" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">알림</a>
+        <a href="/Action" class="btn btn-primary">실행</a>
+        <a href="/Meeting" class="btn btn-primary">모임</a>
+        <a href="/News" class="btn btn-primary">소식1</a>
+        <a href="/News" class="btn btn-primary">소식2,3,4,5</a>
+        <a href="/MyPage" class="btn btn-primary">마이페이지</a>
+        <a href="/Admin/Group" class="btn btn-primary">관리자</a>
+        <a href="/Admin/MyGroup" class="btn btn-primary">동관리자</a>
+        <button type="button" class="btn btn-danger">
+            알림 <span class="badge badge-light">4</span>
+        </button>
+        <!--<<a href="/board/list" class="btn btn-primary">게시판</a> -->
+
 
 
 
